<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userViewModel"
            type="com.example.manageincidentsapp.user.UserViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/PrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".OtpVerification">

        <TextView
            android:id="@+id/code_text"
            style="@style/PrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enter_the_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextNumber"
            style="@style/SecondaryText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/code_hint"
            android:inputType="number"
            android:maxLength="4"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/code_text" />

        <TextView
            android:id="@+id/code_error_message"
            app:layout_constraintBottom_toTopOf="@+id/send_otp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/wrong_code"
            android:visibility="invisible"
            style="@style/MessageError"
            app:OtpStatus="@{userViewModel.otpStatus}" />

        <Button
            android:id="@+id/send_otp"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/code_error_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>