<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="userViewModel"
            type="com.example.manageincidentsapp.user.UserViewModel"/>
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">



        <EditText
            android:id="@+id/email_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/extra_large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:ems="10"
            android:hint="@string/email_example"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintBottom_toTopOf="@id/error_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/Login_btn"
            style="@style/PrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_message" />

        <TextView
            android:id="@+id/error_message"
            style="@style/MessageError"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/large_margin"
            android:text="@string/email_error_message"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/Login_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:loginStatus="@{userViewModel.loginStatus}"
            app:errorHandler="@{userViewModel.errorHandler}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>